<resources>
    <string name="app_name">Login Screen</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="login">Login</string>
    <string name="celular">Celular</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="cadastrar">Cadastrar</string>
</resources>