<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/outlined_edittext"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias=".5"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/cellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/outlined_edittext"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias=".5"
            android:hint="@string/celular"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/outlined_edittext"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias=".5"
            android:hint="@string/senha"/>

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/outlined_edittext"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias=".5"
            android:hint="@string/confirme_a_senha"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias=".7"
            app:layout_constraintTop_toBottomOf="@id/password_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/cadastrar"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>